Finalizando primeiro protótipo do site

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 <p>Centro, Caraguatatuba - SP, 11660-130</p>
             </div>
             <div class="">
-                <img class="contato__apresentacao__imagem" src="./assets/loja.jpg" alt="">
+                <img class="contato__apresentacao__imagem" src="./assets/loja.jpg" alt="Foto do salão da loja">
             </div>
         </section>
         <section class="contato__mapa">
