--- a/customers.html
+++ b/customers.html
@@ -24,18 +24,18 @@
         <h1 class="principal__titulo">Clientes</h1>
         <p class="principal__subtitulo">Veja o que as pessoas estão comentando da loja:</p>
         <section class="principal__clientes">
-            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-um.png" alt="">
-            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-dois.png" alt="">
-            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-tres.png" alt="">
-            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-quatro.png" alt="">
-            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-cinco.png" alt="">
-            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-seis.png" alt="">
+            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-um.png" alt="Print com comentário de Cliente">
+            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-dois.png" alt="Print com comentário de Cliente">
+            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-tres.png" alt="Print com comentário de Cliente">
+            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-quatro.png" alt="Print com comentário de Cliente">
+            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-cinco.png" alt="Print com comentário de Cliente">
+            <img class="principal__clientes__comentarios" src="./assets/clientes/cliente-seis.png" alt="Print com comentário de Cliente">
         </section>
         <h2 class="principal__titulo">Restaurantes</h2>
         <p class="principal__subtitulo">Qualidade aprovada também por bares e restaurantes da região</p>        
         <section class="principal__restaurantes">
             <div class="principal__restaurantes__bloco">
-                <img class="principal__restaurantes__imagem" src="./assets/clientes/parceiro-um.jpg" alt="">
+                <img class="principal__restaurantes__imagem" src="./assets/clientes/parceiro-um.jpg" alt="Logo restaurante Mar e Brasa">
                 <p class="principal__restaurantes__texto">Mar & Brasa</p>
                 <p class="principal__restaurantes__texto">Sushi e Steakhouse</p>
                 <p class="principal__restaurantes__texto">(12) 2134-0237 WhatsApp/Reservas</p>
@@ -43,7 +43,7 @@
                 <p class="principal__restaurantes__texto">Todos os dias a partir das 11h30</p> 
             </div>
             <div class="principal__restaurantes__bloco">
-                <img class="principal__restaurantes__imagem" src="./assets/clientes/parceiro-dois.jpg" alt="">
+                <img class="principal__restaurantes__imagem" src="./assets/clientes/parceiro-dois.jpg" alt="Logo Boteco do Porto">
                 <p class="principal__restaurantes__texto">Buteco do Porto</p>
                 <p class="principal__restaurantes__texto">Bar, espetaria e lanchonete</p>
                 <p class="principal__restaurantes__texto">Hambúrguer feito na BRASA</p>
