--- a/partners.html
+++ b/partners.html
@@ -82,7 +82,7 @@
                 <p class="parceiros__titulo">Clínicas</p>      
                 <table class="parceiros__tabela" style="width:85%">
                     <tr>
-                        <td><img src="./assets/parceiros/clinica-balance.png"></tdstyle=>
+                        <td><img src="./assets/parceiros/clinica-balance.png" alt="Logo clínica Balance Pro"></tdstyle=>
                         <td style="width:20%">
                             <dl>
                                 <dt>Balance Pro</dt>
@@ -90,7 +90,7 @@
                                 <dd>@balanceprobr</dd>
                             </dl>
                         </td>                    
-                        <td><img src="./assets/parceiros/clinica-stella.jpg"></td>
+                        <td><img src="./assets/parceiros/clinica-stella.jpg" alt="Logo Casa de Saúde Stella Maris"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Casa de Saúde Stella Maris</dt>
@@ -121,7 +121,7 @@
                 <p class="parceiros__titulo">Comércio</p>      
                 <table class="parceiros__tabela" style="width:93%">
                     <tr>
-                        <td><img src="./assets/parceiros/comercio-acec.jpg"></td>
+                        <td><img src="./assets/parceiros/comercio-acec.jpg"  alt="Logo ACEC"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>ACEC - A Casa do Empreendedor</dt>
@@ -129,7 +129,7 @@
                                 <dd>@ace_caragua</dd>
                             </dl>
                         </td>
-                        <td><img src="./assets/parceiros/comercio-maua.jpg"></tdstyle=>
+                        <td><img src="./assets/parceiros/comercio-maua.jpg" alt="Logo Mauá Bank"></tdstyle=>
                         <td style="width:20%">
                             <dl>
                                 <dt>Mauá Bank</dt>
@@ -137,7 +137,7 @@
                                 <dd>@mauabank</dd>
                             </dl>
                         </td>                    
-                        <td><img src="./assets/parceiros/estetica-evs.png"></tdstyle=>
+                        <td><img src="./assets/parceiros/estetica-evs.png" alt="Logo Espaço Vida Saudável"></tdstyle=>
                         <td style="width:20%">
                             <dl>
                                 <dt>Espaço Vida Saudável</dt>
@@ -160,7 +160,7 @@
                 <p class="parceiros__titulo">Estética  </p>      
                 <table class="parceiros__tabela" style="width:85%">
                     <tr>
-                        <td><img src="./assets/parceiros/estetica-val.jpg"></td>
+                        <td><img src="./assets/parceiros/estetica-val.jpg" alt="Logo Espaço Val"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Espaço Val</dt>
@@ -168,7 +168,7 @@
                                 <dd>@val.espaco</dd>
                             </dl>
                         </td>
-                        <td><img src="./assets/parceiros/estetica-karina.png"></td>
+                        <td><img src="./assets/parceiros/estetica-karina.png" alt="Foto da Karina Alcântara"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Karina Alcântara</dt>
@@ -199,7 +199,7 @@
                 <p class="parceiros__titulo">Life Style</p>      
                 <table class="parceiros__tabela" style="width:50%">
                     <tr>
-                        <td><img src="./assets/parceiros/life-mari.png"></td>
+                        <td><img src="./assets/parceiros/life-mari.png" alt="Foto Mari Monteiro"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Mari Monteiro</dt>
@@ -238,7 +238,7 @@
                 <p class="parceiros__titulo">Médicos</p>      
                 <table class="parceiros__tabela" style="width:50%">
                     <tr>
-                        <td><img src="./assets/parceiros/medico-juan.png"></td>
+                        <td><img src="./assets/parceiros/medico-juan.png" alt="Foto do Dr. Juan"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Dr. Juan Lambert</dt>
@@ -277,7 +277,7 @@
                 <p class="parceiros__titulo">Nutricionistas</p>      
                 <table class="parceiros__tabela" style="width:100%">
                     <tr>
-                        <td><img src="./assets/parceiros/nutri-amanda.jpg"></tdstyle=>
+                        <td><img src="./assets/parceiros/nutri-amanda.jpg" alt="Foto de Perfil da Nutri Amanda Cortez"></tdstyle=>
                         <td style="width:20%">
                             <dl>
                                 <dt>Amanda Cortez</dt>
@@ -285,7 +285,7 @@
                                 <dd>@nutriamandacortez</dd>
                             </dl>
                         </td>                    
-                        <td><img src="./assets/parceiros/nutri-doris.png"></td>
+                        <td><img src="./assets/parceiros/nutri-doris.png" alt="Foto de Perfil da Nutri Dóris">></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Dóris</dt>
@@ -294,7 +294,7 @@
                                 <dd>bioesteticasantos</dd>
                             </dl>
                         </td>  
-                        <td><img src="./assets/parceiros/nutri-gabrielle.jpg"></td>
+                        <td><img src="./assets/parceiros/nutri-gabrielle.jpg" alt="Foto de Perfil da Nutri Gabrielle Gimenez">></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Gabrielle Gimenez</dt>
@@ -302,7 +302,7 @@
                                 <dd>@nutri.gabigimenez</dd>
                             </dl>
                         </td>  
-                        <td><img src="./assets/parceiros/nutri-heloisa.jpg"></td>
+                        <td><img src="./assets/parceiros/nutri-heloisa.jpg" alt="Foto de Perfil da Nutri Heloísa Almeida">></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Heloísa Almeida</dt>
@@ -314,7 +314,7 @@
                 </table>
                 <table class="parceiros__tabela" style="width:100%">
                     <tr>
-                        <td><img src="./assets/parceiros/nutri-jacque.png"></tdstyle=>
+                        <td><img src="./assets/parceiros/nutri-jacque.png" alt="Foto de Perfil da Nutri Jacqueline Macêdo">></tdstyle=>
                             <td style="width:20%">
                                 <dl>
                                     <dt>Jacqueline Macêdo</dt>
@@ -322,7 +322,7 @@
                                     <dd>@nutrijacquemacedo</dd>
                                 </dl>
                             </td>                    
-                            <td><img src="./assets/parceiros/nutri-julia.png"></td>
+                            <td><img src="./assets/parceiros/nutri-julia.png" alt="Foto de Perfil da Nutri Julia Lima">></td>
                             <td style="width:20%">
                             <dl>
                                 <dt>Julia Lima</dt>
@@ -330,7 +330,7 @@
                                 <dd>@juulima.nutri</dd>
                             </dl>
                         </td>
-                        <td><img src="./assets/parceiros/nutri-paula.png"></td>
+                        <td><img src="./assets/parceiros/nutri-paula.png" alt="Foto de Perfil da Nutri Paula Daher">></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Paula Daher</dt>
@@ -338,7 +338,7 @@
                                 <dd>@nutpauladaher</dd>
                             </dl>
                         </td>  
-                        <td><img src="./assets/parceiros/nutri-vitoria.png"></td>
+                        <td><img src="./assets/parceiros/nutri-vitoria.png" alt="Foto de Perfil da Nutri Vitória Costa">></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Vitória Costa</dt>
@@ -353,7 +353,7 @@
                 <p class="parceiros__titulo">Personal Trainers</p>      
                 <table class="parceiros__tabela" style="width:85%">
                     <tr>
-                        <td><img src="./assets/parceiros/personal-jhon.png"></tdstyle=>
+                        <td><img src="./assets/parceiros/personal-jhon.png" alt="Foto de Perfil do Coah Jhon">></tdstyle=>
                         <td style="width:20%">
                             <dl>
                                 <dt>Jhon</dt>
@@ -361,7 +361,7 @@
                                 <dd>@jhonhenriqueoficial</dd>
                             </dl>
                         </td>                    
-                        <td><img src="./assets/parceiros/personal-neila.png"></td>
+                        <td><img src="./assets/parceiros/personal-neila.png" alt="Foto de Perfil da Personal Trainer Neila Ribeiro">></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Neila Ribeiro</dt>
