--- a/products.html
+++ b/products.html
@@ -24,45 +24,45 @@
         <h1 class="principal__titulo">Conheça nossos produtos</h1>
         <table class="tabela__produtos">
             <tr>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/petiscos-e-cereais.png"></td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/petiscos-e-cereais.png" alt="Amendoins amontoados"></td>
                 <td class="tabela__produtos__linhas">Petiscos e Cereais</td>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/doces-saudaveis.png"></td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/doces-saudaveis.png" alt="Três potes de Mel, um do lado do outro"></td>
                 <td class="tabela__produtos__linhas" class="texto__tabela">Doces Saudáveis</td>
             </tr>
             <tr>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/guloseimas-fit.png"></td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/guloseimas-fit.png" alt="Foto de bolos industrializados, sem açúcar e lactose"></td>
                 <td class="tabela__produtos__linhas">Guloseimas Fit</td>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/farinhas-especiais.png"></td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/farinhas-especiais.png" alt="Amontoado de Farinhas"></td>
                 <td class="tabela__produtos__linhas" class="texto__tabela">Farinhas Especiais</td>
             </tr>
             <tr>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/drageados.png"></td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/drageados.png" alt="Amontoado de drágeas"></td>
                 <td class="tabela__produtos__linhas">Drageados</td>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/bebidas.png"></td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/bebidas.png" alt="Kombuchas enfileiradas"></td>
                 <td class="tabela__produtos__linhas">Bebidas</td>
             </tr>
             <tr>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/salgados-saudaveis.png"> </td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/salgados-saudaveis.png" alt="Pacote de chips de Banana industrializados"> </td>
                 <td class="tabela__produtos__linhas">Salgados Saudáveis</td>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/temperos-condimentos.png"></td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/temperos-condimentos.png" alt="Amontoado de pimentas"></td>
                 <td class="tabela__produtos__linhas">Temperos</td>
             </tr>
             <tr>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/castanhas.png"> </td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/castanhas.png" alt="Amontoado de mix de castahas"></td>
                 <td class="tabela__produtos__linhas">Castanhas e Nuts</td>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/preparos-rapidos.png"></td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/preparos-rapidos.png" alt="Foto com potinho de risoto"></td>
                 <td class="tabela__produtos__linhas">Preparos Rápidos</td>
             </tr>
             <tr>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/frutas-especiais.png"> </td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/frutas-especiais.png" alt="Amontoado de Uvas passas pretas e brancas"></td>
                 <td class="tabela__produtos__linhas">Frutas Especiais</td>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/saude.png"></td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/saude.png" alt="Vidrinhos de Florais"></td>
                 <td class="tabela__produtos__linhas">Saúde</td>
             </tr>
             <tr>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/sementes-farelos.png"> </td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/sementes-farelos.png" alt="Amontoado de grãos e farelos"></td>
                 <td class="tabela__produtos__linhas">Grãos, Sementes, Farelos</td>
-                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/adocantes.png"></td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/adocantes.png" alt="Amontoado de adoçante em pó"></td>
                 <td class="tabela__produtos__linhas">Adoçantes</td>
             </tr>
         </table>
