Consertando bugs e finalizando o projeto

--- a/partners.html
+++ b/partners.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/extra.css">
     <style>
         table {
           border-spacing: 30px;
@@ -15,10 +14,6 @@
         th {
         text-align: left;
         font-size: 1.5rem;
-        }
-
-        div#container {
-        overflow-x: auto;
         }
     </style>
 </head>
@@ -285,7 +280,7 @@
                                 <dd>@nutriamandacortez</dd>
                             </dl>
                         </td>                    
-                        <td><img src="./assets/parceiros/nutri-doris.png" alt="Foto de Perfil da Nutri Dóris">></td>
+                        <td><img src="./assets/parceiros/nutri-doris.png" alt="Foto de Perfil da Nutri Dóris"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Dóris</dt>
@@ -294,7 +289,7 @@
                                 <dd>bioesteticasantos</dd>
                             </dl>
                         </td>  
-                        <td><img src="./assets/parceiros/nutri-gabrielle.jpg" alt="Foto de Perfil da Nutri Gabrielle Gimenez">></td>
+                        <td><img src="./assets/parceiros/nutri-gabrielle.jpg" alt="Foto de Perfil da Nutri Gabrielle Gimenez"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Gabrielle Gimenez</dt>
@@ -302,7 +297,7 @@
                                 <dd>@nutri.gabigimenez</dd>
                             </dl>
                         </td>  
-                        <td><img src="./assets/parceiros/nutri-heloisa.jpg" alt="Foto de Perfil da Nutri Heloísa Almeida">></td>
+                        <td><img src="./assets/parceiros/nutri-heloisa.jpg" alt="Foto de Perfil da Nutri Heloísa Almeida"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Heloísa Almeida</dt>
@@ -314,7 +309,7 @@
                 </table>
                 <table class="parceiros__tabela" style="width:100%">
                     <tr>
-                        <td><img src="./assets/parceiros/nutri-jacque.png" alt="Foto de Perfil da Nutri Jacqueline Macêdo">></tdstyle=>
+                        <td><img src="./assets/parceiros/nutri-jacque.png" alt="Foto de Perfil da Nutri Jacqueline Macêdo"></tdstyle=>
                             <td style="width:20%">
                                 <dl>
                                     <dt>Jacqueline Macêdo</dt>
@@ -322,7 +317,7 @@
                                     <dd>@nutrijacquemacedo</dd>
                                 </dl>
                             </td>                    
-                            <td><img src="./assets/parceiros/nutri-julia.png" alt="Foto de Perfil da Nutri Julia Lima">></td>
+                            <td><img src="./assets/parceiros/nutri-julia.png" alt="Foto de Perfil da Nutri Julia Lima"></td>
                             <td style="width:20%">
                             <dl>
                                 <dt>Julia Lima</dt>
@@ -330,7 +325,7 @@
                                 <dd>@juulima.nutri</dd>
                             </dl>
                         </td>
-                        <td><img src="./assets/parceiros/nutri-paula.png" alt="Foto de Perfil da Nutri Paula Daher">></td>
+                        <td><img src="./assets/parceiros/nutri-paula.png" alt="Foto de Perfil da Nutri Paula Daher"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Paula Daher</dt>
@@ -338,7 +333,7 @@
                                 <dd>@nutpauladaher</dd>
                             </dl>
                         </td>  
-                        <td><img src="./assets/parceiros/nutri-vitoria.png" alt="Foto de Perfil da Nutri Vitória Costa">></td>
+                        <td><img src="./assets/parceiros/nutri-vitoria.png" alt="Foto de Perfil da Nutri Vitória Costa"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Vitória Costa</dt>
@@ -353,7 +348,7 @@
                 <p class="parceiros__titulo">Personal Trainers</p>      
                 <table class="parceiros__tabela" style="width:85%">
                     <tr>
-                        <td><img src="./assets/parceiros/personal-jhon.png" alt="Foto de Perfil do Coah Jhon">></tdstyle=>
+                        <td><img src="./assets/parceiros/personal-jhon.png" alt="Foto de Perfil do Coah Jhon"></tdstyle=>
                         <td style="width:20%">
                             <dl>
                                 <dt>Jhon</dt>
@@ -361,7 +356,7 @@
                                 <dd>@jhonhenriqueoficial</dd>
                             </dl>
                         </td>                    
-                        <td><img src="./assets/parceiros/personal-neila.png" alt="Foto de Perfil da Personal Trainer Neila Ribeiro">></td>
+                        <td><img src="./assets/parceiros/personal-neila.png" alt="Foto de Perfil da Personal Trainer Neila Ribeiro"></td>
                         <td style="width:20%">
                             <dl>
                                 <dt>Neila Ribeiro</dt>
